crates/cox-provider/src/openai/snapshots/cox_provider__openai__chat__tests__chat_request_plain_text.snap
---
source: crates/cox-provider/src/openai/chat.rs
expression: body
---
{
  "max_tokens": 16384,
  "messages": [
    {
      "content": "<tool specs>\n\nYou are cox.",
      "role": "system"
    },
    {
      "content": "read a.rs",
      "role": "user"
    }
  ],
  "model": "qwen3-coder",
  "stream": true,
  "stream_options": {
    "include_usage": true
  },
  "tools": [
    {
      "function": {
        "description": "Read a file",
        "name": "read",
        "parameters": {
          "properties": {
            "path": {
              "type": "string"
            }
          },
          "type": "object"
        }
      },
      "type": "function"
    }
  ]
}
